# game-oclock-server

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  client-gen-conf.yml  client-gen.sh  docker-compose.yml  entrypoint.sh  game_collection_server.code-workspace  run-client-gen.sh  run-docker-build.sh  run-utils.sh  rust-toolchain  rust-toolchain.toml  sonar-project.properties  test.sql
.cargo/: config.toml
.github/workflows/: docker.yml  main.yml  rust.yml
migrations/: 20230302211756_init.sql  20230822115206_log_end_datetime.sql
sql/: init.sql
src/: date_utils.rs  errors.rs  lib.rs  main.rs  migrations.rs  multipart_utils.rs  openapi.rs  providers.rs  string_utils.rs  temp_file_utils.rs  utils.rs  uuid_utils.rs
src/auth/: mod.rs  password_auth.rs  token_auth.rs
src/clients/: cloudinary_client.rs  image_client.rs  mod.rs
src/clients/cloudinary/: cloudinary_client.rs  mod.rs
src/entities/: dlc.rs  dlc_available.rs  dlc_finish.rs  game.rs  game_available.rs  game_finish.rs  game_log.rs  game_tag.rs  game_user_info.rs  game_with_finish.rs  game_with_log.rs  mod.rs  pagination.rs  platform.rs  query.rs  search.rs  table.rs  tag.rs  user.rs
src/extractors/: logged_user.rs  mod.rs
src/mapper/: dlc_mapper.rs  dlc_with_finish_mapper.rs  duration_mapper.rs  game_log_mapper.rs  game_mapper.rs  game_review_mapper.rs  game_status_mapper.rs  game_with_finish_mapper.rs  game_with_logs_mapper.rs  mod.rs  platform_mapper.rs  platform_type_mapper.rs  query_mapper.rs  search_mapper.rs  tag_mapper.rs  user_mapper.rs
src/models/: auth.rs  date.rs  dlc.rs  dlc_finish.rs  dlc_with_finish.rs  duration.rs  error.rs  file_temp_path.rs  game.rs  game_finish.rs  game_log.rs  game_review.rs  game_status.rs  game_tag.rs  game_with_finish.rs  game_with_logs.rs  id_param.rs  image.rs  merge.rs  mod.rs  model_name.rs  pagination.rs  params.rs  platform.rs  platform_type.rs  query.rs  search.rs  tag.rs  user.rs
src/query/: dlc_available_query.rs  dlc_finish_query.rs  dlc_query.rs  game_available_query.rs  game_finish_query.rs  game_log_query.rs  game_query.rs  game_tag_query.rs  mod.rs  platform_query.rs  query.rs  search.rs  tag_query.rs  user_query.rs
src/repository/: base.rs  dlc_available_repository.rs  dlc_finish_repository.rs  dlc_repository.rs  dlc_with_finish_repository.rs  game_available_repository.rs  game_finish_repository.rs  game_log_repository.rs  game_repository.rs  game_tag_repository.rs  game_with_finish_repository.rs  game_with_log_repository.rs  mod.rs  platform_repository.rs  tag_repository.rs  user_repository.rs
src/routes/: auth.rs  base.rs  dlc_finish.rs  dlcs.rs  game_finish.rs  game_logs.rs  game_streaks.rs  games.rs  is_alive.rs  mod.rs  platform.rs  tags.rs  users.rs
src/services/: auth_service.rs  base.rs  dlc_available_service.rs  dlc_finishes_service.rs  dlc_image_service.rs  dlc_with_finish_service.rs  dlcs_service.rs  game_available_service.rs  game_finishes_service.rs  game_image_service.rs  game_logs_service.rs  game_review_service.rs  game_streaks_service.rs  game_tags_service.rs  game_with_finish_service.rs  game_with_logs_service.rs  games_service.rs  logs_utils.rs  mod.rs  platform_image_service.rs  platforms_service.rs  tags_service.rs  users_service.rs
