[package]
name = "game-collection-server"
version = "1.2.1"
edition = "2021"

[dependencies]
actix-web = { version = "^4", default-features = false, features = [ "rustls" ] }
sqlx = { version = "^0", default-features = false, features = [ "macros", "migrate", "runtime-actix-rustls", "postgres", "chrono", "uuid" ] }
sea-query = { version = "0.28.5", default-features = false, features = [ "derive", "backend-postgres", "with-chrono" ] }
chrono = { version = "^0", default-features = false, features = [ "serde" ] }
iso8601 = { version = "^0", default-features = false }

# Authentication
actix-web-httpauth = { version = "^0", default-features = false }
jsonwebtoken = { version = "^8", default-features = false }
base64 = { version = "^0.13", default-features = false }
uuid = { version = "^1", default-features = false, features = [ "v4", "v7", "std" ] }
bcrypt = { version = "^0", default-features = false, features = [ "std" ] }

# TLS
# Fix version because actix uses old version
rustls = { version = "0.20.8", default-features = false }
rustls-pemfile = { version = "^1", default-features = false }

# Serialisation/Deserialisation
serde = { version = "^1", default-features = false }
serde_json = { version = "^1", default-features = false }

# Image
cloudinary = { git = "https://github.com/viplmad/cloudinary_rs" }
actix-multipart = { version = "^0", default-features = false }
futures = { version = "^0", default-features = false }
async-trait = { version = "^0", default-features = false }

# Environment variables
dotenvy = { version = "^0", default-features = false }

# Logging
log = { version = "^0", default-features = false }
env_logger = { version = "^0", default-features = false }

# OpenAPI
utoipa = { version = "^3", default-features = false, features = [ "actix_extras", "chrono" ] }
utoipa-swagger-ui = { version = "^3", default-features = false, features = [ "actix-web" ] }